--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -2,8 +2,8 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=tale
+spring.datasource.password=tale
 spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
@@ -28,3 +28,4 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
 pagehelper.params=count=countSql
+
