--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -23,6 +23,9 @@ mybatis.type-aliases-package=com.my.blog.website.dao
 
 server.port=8080
 
+multipart.max-file-size=100Mb
+multipart.max-request-size=100Mb
+  
 #pagehelper
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
